// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`applyLinks 1`] = `
[
  <span>
    No. Vaccines are 
  </span>,
  <span>
    <span
      className="font-normal font-sans text-[#7DFA86] cursor-pointer"
      onClick={[Function]}
    >
      not associated with the development of autism or autism spectrum disorder
    </span>
  </span>,
  <span>
    . Multiple studies have found no relationship between vaccination and autism or ASD.
  </span>,
]
`;

exports[`applyLinks 2`] = `
[
  <span>
    Dreams are a remarkable experiment in psychology and neuroscience, revealing that the human brain can generate entire conscious experiences by itself, disconnected from the environment. Content analysis and developmental studies promote understanding of dream phenomenology. Brain lesion studies, functional imaging, and neurophysiology have advanced knowledge of the neural basis of dreaming. 
  </span>,
  <span>
    <span
      className="font-normal font-sans text-[#7DFA86] cursor-pointer"
      onClick={[Function]}
    >
      Dreaming and the brain: from phenomenology to neurophysiology
    </span>
  </span>,
  <span>
     The brain as a dream state generator: an activation-synthesis hypothesis of the dream process, 
  </span>,
  <span>
    <span
      className="font-normal font-sans text-[#7DFA86] cursor-pointer"
      onClick={[Function]}
    >
      The brain as a dream state generator: an activation-synthesis hypothesis of the dream process
    </span>
  </span>,
  <span>
    
  </span>,
]
`;
